feat(server): create recipe functionalities
